SWB4/swb/SWBNLP/src/org/semanticwb/nlp/sParser.java
/*
 * To change this template, choose Tools | Templates
 * and open the template in the editor.
 */

package org.semanticwb.nlp;

/**
 *
 * @author hasdai
 */
// $ANTLR 3.1.2 /home/hasdai/Documentos/sParser.g 2009-03-20 13:29:53

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class sParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "WHITESPACE", "SIGN", "SIGL", "SIGG", "SIGE", "SIGLE", "SIGGE", "PREC", "MODT", "PRED", "MODE", "MODO", "BOL", "NUM", "LIT", "ORDOP", "VAR", "DEL", "LPAR", "RPAR", "SIGI", "LIMIT", "SELECT", "MOD", "OBJLIST", "PROPLIST", "ASIGN", "SENTENCE", "COMPL", "COMPG", "COMPLE", "COMPGE", "PRECON", "PREDE", "OFFSET", "ORDER", "COMPNAME", "ASKQUERY", "MODTO", "NAME"
    };
    public static final int SIGN=5;
    public static final int SIGI=24;
    public static final int SIGL=6;
    public static final int SIGE=8;
    public static final int ORDER=39;
    public static final int LIMIT=25;
    public static final int MOD=27;
    public static final int ASKQUERY=41;
    public static final int SIGG=7;
    public static final int DEL=21;
    public static final int ORDOP=19;
    public static final int BOL=16;
    public static final int MODTO=42;
    public static final int OBJLIST=28;
    public static final int COMPL=32;
    public static final int EOF=-1;
    public static final int COMPG=33;
    public static final int NAME=43;
    public static final int LPAR=22;
    public static final int SENTENCE=31;
    public static final int COMPLE=34;
    public static final int OFFSET=38;
    public static final int MODT=12;
    public static final int PROPLIST=29;
    public static final int VAR=20;
    public static final int MODO=15;
    public static final int SELECT=26;
    public static final int MODE=14;
    public static final int PREDE=37;
    public static final int COMPGE=35;
    public static final int PRECON=36;
    public static final int PREC=11;
    public static final int PRED=13;
    public static final int SIGGE=10;
    public static final int LIT=18;
    public static final int WHITESPACE=4;
    public static final int NUM=17;
    public static final int SIGLE=9;
    public static final int COMPNAME=40;
    public static final int ASIGN=30;
    public static final int RPAR=23;

    // delegates
    // delegators


        public sParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public sParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);

        }

    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return sParser.tokenNames; }
    public String getGrammarFileName() { return "/home/hasdai/Documentos/sParser.g"; }


    	private int errCount = 0;
    	private boolean isCompound = false;

    	public void displayRecognitionError(String[] tokenNames, RecognitionException e) {
            	errCount++;
        	}

    	public int getErrorCount() {
            	return errCount;
        	}

        	public boolean isCompoundQuery() {
        		return isCompound;
        	}


    public static class squery_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "squery"
    // /home/hasdai/Documentos/sParser.g:31:1: squery : selectquery ;
    public final sParser.squery_return squery() throws RecognitionException {
        sParser.squery_return retval = new sParser.squery_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        sParser.selectquery_return selectquery1 = null;



        try {
            // /home/hasdai/Documentos/sParser.g:32:1: ( selectquery )
            // /home/hasdai/Documentos/sParser.g:32:3: selectquery
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_selectquery_in_squery111);
            selectquery1=selectquery();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, selectquery1.getTree());

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "squery"

    public static class selectquery_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "selectquery"
    // /home/hasdai/Documentos/sParser.g:36:1: selectquery : ( limiter )? query ( modifier )? EOF -> ^( SELECT ( limiter )? query ( modifier )? ) ;
    public final sParser.selectquery_return selectquery() throws RecognitionException {
        sParser.selectquery_return retval = new sParser.selectquery_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF5=null;
        sParser.limiter_return limiter2 = null;

        sParser.query_return query3 = null;

        sParser.modifier_return modifier4 = null;


        Object EOF5_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_limiter=new RewriteRuleSubtreeStream(adaptor,"rule limiter");
        RewriteRuleSubtreeStream stream_modifier=new RewriteRuleSubtreeStream(adaptor,"rule modifier");
        RewriteRuleSubtreeStream stream_query=new RewriteRuleSubtreeStream(adaptor,"rule query");
        try {
            // /home/hasdai/Documentos/sParser.g:37:1: ( ( limiter )? query ( modifier )? EOF -> ^( SELECT ( limiter )? query ( modifier )? ) )
            // /home/hasdai/Documentos/sParser.g:37:3: ( limiter )? query ( modifier )? EOF
            {
            // /home/hasdai/Documentos/sParser.g:37:3: ( limiter )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==NUM) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // /home/hasdai/Documentos/sParser.g:0:0: limiter
                    {
                    pushFollow(FOLLOW_limiter_in_selectquery121);
                    limiter2=limiter();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_limiter.add(limiter2.getTree());

                    }
                    break;

            }

            pushFollow(FOLLOW_query_in_selectquery124);
            query3=query();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_query.add(query3.getTree());
            // /home/hasdai/Documentos/sParser.g:37:18: ( modifier )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( ((LA2_0>=MODE && LA2_0<=MODO)) ) {
                alt2=1;
            }
            else if ( (LA2_0==EOF) ) {
                int LA2_2 = input.LA(2);

                if ( (synpred2_sParser()) ) {
                    alt2=1;
                }
            }
            switch (alt2) {
                case 1 :
                    // /home/hasdai/Documentos/sParser.g:0:0: modifier
                    {
                    pushFollow(FOLLOW_modifier_in_selectquery126);
                    modifier4=modifier();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_modifier.add(modifier4.getTree());

                    }
                    break;

            }

            EOF5=(Token)match(input,EOF,FOLLOW_EOF_in_selectquery129); if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_EOF.add(EOF5);



            // AST REWRITE
            // elements: query, limiter, modifier
            // token labels:
            // rule labels: retval
            // token list labels:
            // rule list labels:
            // wildcard labels:
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 37:32: -> ^( SELECT ( limiter )? query ( modifier )? )
            {
                // /home/hasdai/Documentos/sParser.g:37:35: ^( SELECT ( limiter )? query ( modifier )? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(SELECT, "SELECT"), root_1);

                // /home/hasdai/Documentos/sParser.g:37:44: ( limiter )?
                if ( stream_limiter.hasNext() ) {
                    adaptor.addChild(root_1, stream_limiter.nextTree());

                }
                stream_limiter.reset();
                adaptor.addChild(root_1, stream_query.nextTree());
                // /home/hasdai/Documentos/sParser.g:37:59: ( modifier )?
                if ( stream_modifier.hasNext() ) {
                    adaptor.addChild(root_1, stream_modifier.nextTree());

                }
                stream_modifier.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "selectquery"

    public static class limiter_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "limiter"
    // /home/hasdai/Documentos/sParser.g:44:1: limiter : NUM -> ^( LIMIT NUM ) ;
    public final sParser.limiter_return limiter() throws RecognitionException {
        sParser.limiter_return retval = new sParser.limiter_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token NUM6=null;

        Object NUM6_tree=null;
        RewriteRuleTokenStream stream_NUM=new RewriteRuleTokenStream(adaptor,"token NUM");

        try {
            // /home/hasdai/Documentos/sParser.g:45:1: ( NUM -> ^( LIMIT NUM ) )
            // /home/hasdai/Documentos/sParser.g:45:3: NUM
            {
            NUM6=(Token)match(input,NUM,FOLLOW_NUM_in_limiter155); if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_NUM.add(NUM6);



            // AST REWRITE
            // elements: NUM
            // token labels:
            // rule labels: retval
            // token list labels:
            // rule list labels:
            // wildcard labels:
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 45:7: -> ^( LIMIT NUM )
            {
                // /home/hasdai/Documentos/sParser.g:45:10: ^( LIMIT NUM )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(LIMIT, "LIMIT"), root_1);

                adaptor.addChild(root_1, stream_NUM.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "limiter"

    public static class query_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "query"
    // /home/hasdai/Documentos/sParser.g:48:1: query : ( objquery | propquery );
    public final sParser.query_return query() throws RecognitionException {
        sParser.query_return retval = new sParser.query_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        sParser.objquery_return objquery7 = null;

        sParser.propquery_return propquery8 = null;



        try {
            // /home/hasdai/Documentos/sParser.g:49:1: ( objquery | propquery )
            int alt3=2;
            alt3 = dfa3.predict(input);
            switch (alt3) {
                case 1 :
                    // /home/hasdai/Documentos/sParser.g:49:3: objquery
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_objquery_in_query172);
                    objquery7=objquery();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, objquery7.getTree());

                    }
                    break;
                case 2 :
                    // /home/hasdai/Documentos/sParser.g:50:3: propquery
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_propquery_in_query176);
                    propquery8=propquery();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, propquery8.getTree());
                    if ( state.backtracking==0 ) {
                      isCompound = true;
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "query"

    public static class objquery_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "objquery"
    // /home/hasdai/Documentos/sParser.g:53:1: objquery : ( name PREC proplist -> ^( name ^( PRECON proplist ) ) | name );
    public final sParser.objquery_return objquery() throws RecognitionException {
        sParser.objquery_return retval = new sParser.objquery_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token PREC10=null;
        sParser.name_return name9 = null;

        sParser.proplist_return proplist11 = null;

        sParser.name_return name12 = null;


        Object PREC10_tree=null;
        RewriteRuleTokenStream stream_PREC=new RewriteRuleTokenStream(adaptor,"token PREC");
        RewriteRuleSubtreeStream stream_name=new RewriteRuleSubtreeStream(adaptor,"rule name");
        RewriteRuleSubtreeStream stream_proplist=new RewriteRuleSubtreeStream(adaptor,"rule proplist");
        try {
            // /home/hasdai/Documentos/sParser.g:54:1: ( name PREC proplist -> ^( name ^( PRECON proplist ) ) | name )
            int alt4=2;
            alt4 = dfa4.predict(input);
            switch (alt4) {
                case 1 :
                    // /home/hasdai/Documentos/sParser.g:54:3: name PREC proplist
                    {
                    pushFollow(FOLLOW_name_in_objquery187);
                    name9=name();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_name.add(name9.getTree());
                    PREC10=(Token)match(input,PREC,FOLLOW_PREC_in_objquery189); if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_PREC.add(PREC10);

                    pushFollow(FOLLOW_proplist_in_objquery191);
                    proplist11=proplist();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_proplist.add(proplist11.getTree());


                    // AST REWRITE
                    // elements: proplist, name
                    // token labels:
                    // rule labels: retval
                    // token list labels:
                    // rule list labels:
                    // wildcard labels:
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 54:22: -> ^( name ^( PRECON proplist ) )
                    {
                        // /home/hasdai/Documentos/sParser.g:54:25: ^( name ^( PRECON proplist ) )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(stream_name.nextNode(), root_1);

                        // /home/hasdai/Documentos/sParser.g:54:32: ^( PRECON proplist )
                        {
                        Object root_2 = (Object)adaptor.nil();
                        root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(PRECON, "PRECON"), root_2);

                        adaptor.addChild(root_2, stream_proplist.nextTree());

                        adaptor.addChild(root_1, root_2);
                        }

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    // /home/hasdai/Documentos/sParser.g:55:3: name
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_name_in_objquery207);
                    name12=name();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, name12.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "objquery"

    public static class propquery_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "propquery"
    // /home/hasdai/Documentos/sParser.g:58:1: propquery : v1= proplist PRED name ( PREC v2= proplist )? -> ^( name ^( PREDE $v1) ( ^( PRECON $v2) )? ) ;
    public final sParser.propquery_return propquery() throws RecognitionException {
        sParser.propquery_return retval = new sParser.propquery_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token PRED13=null;
        Token PREC15=null;
        sParser.proplist_return v1 = null;

        sParser.proplist_return v2 = null;

        sParser.name_return name14 = null;


        Object PRED13_tree=null;
        Object PREC15_tree=null;
        RewriteRuleTokenStream stream_PREC=new RewriteRuleTokenStream(adaptor,"token PREC");
        RewriteRuleTokenStream stream_PRED=new RewriteRuleTokenStream(adaptor,"token PRED");
        RewriteRuleSubtreeStream stream_name=new RewriteRuleSubtreeStream(adaptor,"rule name");
        RewriteRuleSubtreeStream stream_proplist=new RewriteRuleSubtreeStream(adaptor,"rule proplist");
        try {
            // /home/hasdai/Documentos/sParser.g:59:1: (v1= proplist PRED name ( PREC v2= proplist )? -> ^( name ^( PREDE $v1) ( ^( PRECON $v2) )? ) )
            // /home/hasdai/Documentos/sParser.g:59:3: v1= proplist PRED name ( PREC v2= proplist )?
            {
            pushFollow(FOLLOW_proplist_in_propquery218);
            v1=proplist();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_proplist.add(v1.getTree());
            PRED13=(Token)match(input,PRED,FOLLOW_PRED_in_propquery220); if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_PRED.add(PRED13);

            pushFollow(FOLLOW_name_in_propquery222);
            name14=name();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_name.add(name14.getTree());
            // /home/hasdai/Documentos/sParser.g:59:25: ( PREC v2= proplist )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==PREC) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /home/hasdai/Documentos/sParser.g:59:26: PREC v2= proplist
                    {
                    PREC15=(Token)match(input,PREC,FOLLOW_PREC_in_propquery225); if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_PREC.add(PREC15);

                    pushFollow(FOLLOW_proplist_in_propquery229);
                    v2=proplist();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_proplist.add(v2.getTree());

                    }
                    break;

            }



            // AST REWRITE
            // elements: v1, name, v2
            // token labels:
            // rule labels: v1, retval, v2
            // token list labels:
            // rule list labels:
            // wildcard labels:
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_v1=new RewriteRuleSubtreeStream(adaptor,"rule v1",v1!=null?v1.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_v2=new RewriteRuleSubtreeStream(adaptor,"rule v2",v2!=null?v2.tree:null);

            root_0 = (Object)adaptor.nil();
            // 59:45: -> ^( name ^( PREDE $v1) ( ^( PRECON $v2) )? )
            {
                // /home/hasdai/Documentos/sParser.g:59:48: ^( name ^( PREDE $v1) ( ^( PRECON $v2) )? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_name.nextNode(), root_1);

                // /home/hasdai/Documentos/sParser.g:59:55: ^( PREDE $v1)
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(PREDE, "PREDE"), root_2);

                adaptor.addChild(root_2, stream_v1.nextTree());

                adaptor.addChild(root_1, root_2);
                }
                // /home/hasdai/Documentos/sParser.g:59:68: ( ^( PRECON $v2) )?
                if ( stream_v2.hasNext() ) {
                    // /home/hasdai/Documentos/sParser.g:59:68: ^( PRECON $v2)
                    {
                    Object root_2 = (Object)adaptor.nil();
                    root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(PRECON, "PRECON"), root_2);

                    adaptor.addChild(root_2, stream_v2.nextTree());

                    adaptor.addChild(root_1, root_2);
                    }

                }
                stream_v2.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "propquery"

    public static class name_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "name"
    // /home/hasdai/Documentos/sParser.g:62:1: name : (v1= VAR (v2= VAR )+ -> ^( COMPNAME $v1 $v2) | VAR );
    public final sParser.name_return name() throws RecognitionException {
        sParser.name_return retval = new sParser.name_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token v1=null;
        Token v2=null;
        Token VAR16=null;

        Object v1_tree=null;
        Object v2_tree=null;
        Object VAR16_tree=null;
        RewriteRuleTokenStream stream_VAR=new RewriteRuleTokenStream(adaptor,"token VAR");

        try {
            // /home/hasdai/Documentos/sParser.g:63:1: (v1= VAR (v2= VAR )+ -> ^( COMPNAME $v1 $v2) | VAR )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==VAR) ) {
                int LA7_1 = input.LA(2);

                if ( (LA7_1==VAR) ) {
                    alt7=1;
                }
                else if ( (LA7_1==EOF||(LA7_1>=SIGL && LA7_1<=PREC)||(LA7_1>=PRED && LA7_1<=MODO)||LA7_1==DEL||LA7_1==RPAR) ) {
                    alt7=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 1, input);

                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // /home/hasdai/Documentos/sParser.g:63:3: v1= VAR (v2= VAR )+
                    {
                    v1=(Token)match(input,VAR,FOLLOW_VAR_in_name263); if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_VAR.add(v1);

                    // /home/hasdai/Documentos/sParser.g:63:12: (v2= VAR )+
                    int cnt6=0;
                    loop6:
                    do {
                        int alt6=2;
                        int LA6_0 = input.LA(1);

                        if ( (LA6_0==VAR) ) {
                            alt6=1;
                        }


                        switch (alt6) {
                    	case 1 :
                    	    // /home/hasdai/Documentos/sParser.g:0:0: v2= VAR
                    	    {
                    	    v2=(Token)match(input,VAR,FOLLOW_VAR_in_name267); if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) stream_VAR.add(v2);


                    	    }
                    	    break;

                    	default :
                    	    if ( cnt6 >= 1 ) break loop6;
                    	    if (state.backtracking>0) {state.failed=true; return retval;}
                                EarlyExitException eee =
                                    new EarlyExitException(6, input);
                                throw eee;
                        }
                        cnt6++;
                    } while (true);



                    // AST REWRITE
                    // elements: v2, v1
                    // token labels: v1, v2
                    // rule labels: retval
                    // token list labels:
                    // rule list labels:
                    // wildcard labels:
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleTokenStream stream_v1=new RewriteRuleTokenStream(adaptor,"token v1",v1);
                    RewriteRuleTokenStream stream_v2=new RewriteRuleTokenStream(adaptor,"token v2",v2);
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 63:18: -> ^( COMPNAME $v1 $v2)
                    {
                        // /home/hasdai/Documentos/sParser.g:63:21: ^( COMPNAME $v1 $v2)
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(COMPNAME, "COMPNAME"), root_1);

                        adaptor.addChild(root_1, stream_v1.nextNode());
                        adaptor.addChild(root_1, stream_v2.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    // /home/hasdai/Documentos/sParser.g:64:3: VAR
                    {
                    root_0 = (Object)adaptor.nil();

                    VAR16=(Token)match(input,VAR,FOLLOW_VAR_in_name284); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    VAR16_tree = (Object)adaptor.create(VAR16);
                    adaptor.addChild(root_0, VAR16_tree);
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "name"

    public static class sent_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "sent"
    // /home/hasdai/Documentos/sParser.g:67:1: sent : ( name SIGE val -> ^( ASIGN name val ) | name SIGL val -> ^( COMPL name val ) | name SIGG val -> ^( COMPG name val ) | name SIGLE val -> ^( COMPLE name val ) | name SIGGE val -> ^( COMPGE name val ) | name );
    public final sParser.sent_return sent() throws RecognitionException {
        sParser.sent_return retval = new sParser.sent_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token SIGE18=null;
        Token SIGL21=null;
        Token SIGG24=null;
        Token SIGLE27=null;
        Token SIGGE30=null;
        sParser.name_return name17 = null;

        sParser.val_return val19 = null;

        sParser.name_return name20 = null;

        sParser.val_return val22 = null;

        sParser.name_return name23 = null;

        sParser.val_return val25 = null;

        sParser.name_return name26 = null;

        sParser.val_return val28 = null;

        sParser.name_return name29 = null;

        sParser.val_return val31 = null;

        sParser.name_return name32 = null;

